
* bam(...,discrete=TRUE) has no option to use the identical
	discretizaton to that used in fitting when predicting

* efsud Vb every time? Fix bam NCV variance comp, to be as gam.

1.9-4

*** scasm function provided for shape constrained additive smooth models, via
 linear and quadratic programming, with smoothness by extended Fellner-Schall. 

* bam(...,discrete=TRUE) now returns approx REML for the model itself, rather 
than for the working linearized model. 

* 4-D plotting code axis error fix (y axis labels were being recycled from 
  x axis labels).

* Long ignored argumenty 'shade' removed from 'plot.gam'.  

1.9-3

* fixes a read-one-beyond-allocated memory error (in a redundant check with no
  consequences)

1.9-2

** 'NCV' added as a method option for bam(...,discrete=TRUE). More efficient 
  than gam(...,method='NCV'), but much less efficient than default REML.

* added basic linear programming routine, lp, mainly to find initial values 
  under linear constraint. 

* default margins changed for plot.gam(...,pages=1)

* 'clog' censored logistic family added for AFT models. Written by Chris Shen.

* 'cpois' censored Poisson family added. 

* improved cov matrix estimation under NCV used with correlated errors.

* names in NCV 'nei' structure modified to better match paper and documentation 
  notation.

* estimate.theta improved for semi-definite case (e.g. infinite DoF in scat).  

* extended families now give a useful error if an illegal link is supplied.

* pcls now returns indices of active set constraints as attribute of return 
  vector.

* fix bam to always return a square QR R factor of the model matrix 
  (previously it was possible for it not to be square for a rank deficient 
  model matrix, which could cause a failure in summary). Thanks to Amy Hughes

* Fixed bam/bam.update to pick up weights correctly, rather than failing. 
  Thanks to Max Moldovan. Also adjusted to allow correct behaviour if model
  frame has been deleted.
