@@ -28,8 +28,12 @@ present, and reparameterization needs checking (also for bam).
 *** scasm function provided for shape constrained additive smooth models, via
  linear and quadratic programming, with smoothness by extended Fellner-Schall. 
 
-* bam(...,discrete=TRUE) now returns approx REML for the model itself, rather 
-than for the working linearized model. 
+* bam now returns approx REML/ML for the model itself, rather than for the 
+  working linearized model (other smoothness criteria still reported for 
+  working model only). 
+
+* Improved scale estimation initialization for extended families in bam: can
+  make a noticable difference with 'tw' family in close to Poisson situation.  
 
 * 4-D plotting code axis error fix (y axis labels were being recycled from 
   x axis labels).
